--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "license": "ISC",
   "author": "Johnny Hauser <johnnyhauser@gmail.com>",
+  "type": "module",
   "svelte": "src/index.js",
   "main": "dist/index.js",
   "module": "dist/esm/index.mjs",
@@ -25,25 +26,25 @@
     "test:watch": "f () { export RUN=test; export GLOB=\"$1\"; rollup -w -c rollup.tests.config.js; }; f"
   },
   "dependencies": {
-    "svelte": "^3.32.0"
+    "svelte": "^3.55.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
+    "@babel/core": "^7.20.12",
     "@linaria/babel-preset": "^3.0.0-beta.1",
     "@linaria/core": "^3.0.0-beta.1",
     "@linaria/react": "^3.0.0-beta.1",
     "@linaria/rollup": "^3.0.0-beta.1",
     "@linaria/shaker": "^3.0.0-beta.1",
-    "@rollup/plugin-node-resolve": "^11.1.0",
-    "browser-run": "^10.1.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.4.0",
+    "browser-run": "^11.0.0",
     "glob-module-file": "^3.0.2",
-    "postcss": "^8.3.9",
-    "rollup": "^2.38.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-postcss": "^4.0.1",
-    "rollup-plugin-serve": "^1.1.0",
-    "rollup-plugin-svelte": "^7.1.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "uvu": "^0.5.1"
+    "postcss": "^8.4.21",
+    "rollup": "^3.15.0",
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-serve": "^2.0.2",
+    "rollup-plugin-svelte": "^7.1.2",
+    "uvu": "^0.5.6"
   }
 }
